[workspace]
members = [
    "api-gateway",
    "hash-processor",
    "shared"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdkafka = "0.36"
uuid = { version = "1.0", features = ["v4"] }
dotenvy = "0.15"
tokio-stream = "0.1"