[package]
name = "hash-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rdkafka = { workspace = true }
shared = { path = "../shared" }
sha2 = "0.10"
dotenvy = { workspace = true }
tokio-stream = { workspace = true }